--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "expo start --dev-client --clear",
     "prebuild": "expo prebuild --clean",
     "android": "expo run:android",
-    "ios": "expo run:ios --device",
+    "ios": "expo run:ios",
     "doctor": "npx expo-doctor",
     "start:staging": "APP_ENV=staging expo start --dev-client",
     "prebuild:staging": "APP_ENV=staging expo prebuild --clean",
@@ -30,63 +30,63 @@
   },
   "dependencies": {
     "@expo-google-fonts/montserrat": "0.2.3",
-    "@supabase/supabase-js": "2.42.0",
-    "@tanstack/react-query": "5.29.0",
+    "@supabase/supabase-js": "2.44.4",
+    "@tanstack/react-query": "5.51.11",
     "app-icon-badge": "0.0.15",
     "dotenv": "16.4.5",
-    "expo": "50.0.14",
-    "expo-application": "~5.8.3",
-    "expo-blur": "~12.9.2",
-    "expo-build-properties": "~0.11.1",
-    "expo-constants": "~15.4.5",
-    "expo-crypto": "~12.8.1",
-    "expo-dev-client": "~3.3.11",
-    "expo-device": "~5.9.3",
-    "expo-haptics": "~12.8.1",
-    "expo-image": "~1.10.6",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-linking": "~6.2.2",
-    "expo-location": "~16.5.5",
-    "expo-notifications": "~0.27.6",
-    "expo-router": "3.4.8",
-    "expo-secure-store": "12.8.1",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.3",
-    "qs": "6.12.0",
+    "expo": "~51.0.22",
+    "expo-application": "~5.9.1",
+    "expo-blur": "~13.0.2",
+    "expo-build-properties": "~0.12.3",
+    "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
+    "expo-dev-client": "~4.0.20",
+    "expo-device": "~6.0.2",
+    "expo-haptics": "~13.0.1",
+    "expo-image": "~1.12.13",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-location": "~17.0.1",
+    "expo-notifications": "~0.28.11",
+    "expo-router": "~3.5.18",
+    "expo-secure-store": "~13.0.2",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
+    "qs": "6.12.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "7.51.2",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.1",
-    "react-native-reanimated": "~3.6.3",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "15.1.0",
+    "react-hook-form": "7.52.1",
+    "react-native": "0.74.3",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-url-polyfill": "2.0.0",
-    "styled-components": "6.1.8"
+    "styled-components": "6.1.12"
   },
   "devDependencies": {
-    "@babel/core": "7.24.4",
-    "@ianvs/prettier-plugin-sort-imports": "4.2.1",
-    "@types/react": "~18.2.14",
+    "@babel/core": "7.24.9",
+    "@ianvs/prettier-plugin-sort-imports": "4.3.1",
+    "@types/react": "~18.2.79",
     "@types/react-native": "0.73.0",
     "@types/styled-components": "5.1.34",
     "@types/styled-components-react-native": "5.2.5",
-    "@typescript-eslint/eslint-plugin": "7.5.0",
-    "@typescript-eslint/parser": "7.5.0",
-    "babel-plugin-module-resolver": "5.0.0",
+    "@typescript-eslint/eslint-plugin": "7.17.0",
+    "@typescript-eslint/parser": "7.17.0",
+    "babel-plugin-module-resolver": "5.0.2",
     "babel-plugin-styled-components": "2.1.4",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-flowtype": "8.0.3",
     "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsx-a11y": "6.8.0",
-    "eslint-plugin-react": "7.34.1",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-jsx-a11y": "6.9.0",
+    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-react-native": "4.1.0",
-    "prettier": "3.2.5",
-    "typescript": "5.4.4",
-    "zod": "3.22.4"
+    "prettier": "3.3.3",
+    "typescript": "5.5.4",
+    "zod": "3.23.8"
   }
 }
